@@ -1,5 +1,6 @@
 package org.uma.jmetal.auto.autoconfigurablealgorithm;
 
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
@@ -11,14 +12,7 @@ import org.uma.jmetal.auto.parameter.Parameter;
 import org.uma.jmetal.auto.parameter.PositiveIntegerValue;
 import org.uma.jmetal.auto.parameter.RealParameter;
 import org.uma.jmetal.auto.parameter.StringParameter;
-import org.uma.jmetal.auto.parameter.catalogue.CreateInitialSolutionsParameter;
-import org.uma.jmetal.auto.parameter.catalogue.CrossoverParameter;
-import org.uma.jmetal.auto.parameter.catalogue.ExternalArchiveParameter;
-import org.uma.jmetal.auto.parameter.catalogue.MutationParameter;
-import org.uma.jmetal.auto.parameter.catalogue.ProbabilityParameter;
-import org.uma.jmetal.auto.parameter.catalogue.RepairDoubleSolutionStrategyParameter;
-import org.uma.jmetal.auto.parameter.catalogue.SelectionParameter;
-import org.uma.jmetal.auto.parameter.catalogue.VariationParameter;
+import org.uma.jmetal.auto.parameter.catalogue.*;
 import org.uma.jmetal.component.algorithm.EvolutionaryAlgorithm;
 import org.uma.jmetal.component.catalogue.common.evaluation.Evaluation;
 import org.uma.jmetal.component.catalogue.common.evaluation.impl.SequentialEvaluation;
@@ -33,8 +27,8 @@ import org.uma.jmetal.component.catalogue.ea.variation.Variation;
 import org.uma.jmetal.component.util.RankingAndDensityEstimatorPreference;
 import org.uma.jmetal.problem.Problem;
 import org.uma.jmetal.problem.ProblemFactory;
-import org.uma.jmetal.problem.doubleproblem.DoubleProblem;
-import org.uma.jmetal.solution.doublesolution.DoubleSolution;
+import org.uma.jmetal.problem.permutationproblem.PermutationProblem;
+import org.uma.jmetal.solution.permutationsolution.PermutationSolution;
 import org.uma.jmetal.util.archive.Archive;
 import org.uma.jmetal.util.comparator.MultiComparator;
 import org.uma.jmetal.util.comparator.dominanceComparator.impl.DominanceWithConstraintsComparator;
@@ -49,7 +43,7 @@ import org.uma.jmetal.util.ranking.impl.FastNonDominatedSortRanking;
  *
  * @autor Antonio J. Nebro
  */
-public class AutoNSGAII implements AutoConfigurableAlgorithm {
+public class AutoNSGAIIPermutation implements AutoConfigurableAlgorithm {
   private List<Parameter<?>> configurableParameterList = new ArrayList<>();
   private List<Parameter<?>> fixedParameterList = new ArrayList<>();
   private StringParameter problemNameParameter;
@@ -57,13 +51,12 @@ public class AutoNSGAII implements AutoConfigurableAlgorithm {
   private PositiveIntegerValue randomGeneratorSeedParameter;
   private PositiveIntegerValue maximumNumberOfEvaluationsParameter;
   private CategoricalParameter algorithmResultParameter;
-  private ExternalArchiveParameter<DoubleSolution> externalArchiveParameter;
+  private ExternalArchiveParameter<PermutationSolution<Integer>> externalArchiveParameter;
   private PositiveIntegerValue populationSizeParameter;
   private IntegerParameter populationSizeWithArchiveParameter;
-  //private IntegerParameter offspringPopulationSizeParameter;
   private CategoricalIntegerParameter offspringPopulationSizeParameter;
   private CreateInitialSolutionsParameter createInitialSolutionsParameter;
-  private SelectionParameter<DoubleSolution> selectionParameter;
+  private SelectionParameter<PermutationSolution<Integer>> selectionParameter;
   private VariationParameter variationParameter;
 
   @Override
@@ -75,7 +68,7 @@ public class AutoNSGAII implements AutoConfigurableAlgorithm {
     return fixedParameterList;
   }
 
-  public AutoNSGAII() {
+  public AutoNSGAIIPermutation() {
     this.configure();
   }
 
@@ -107,51 +100,18 @@ public class AutoNSGAII implements AutoConfigurableAlgorithm {
 
   private void variation() {
     CrossoverParameter crossoverParameter = new CrossoverParameter(
-        List.of("SBX", "BLX_ALPHA", "wholeArithmetic"));
+        List.of("PMX"));
     ProbabilityParameter crossoverProbability =
         new ProbabilityParameter("crossoverProbability");
     crossoverParameter.addGlobalParameter(crossoverProbability);
-    RepairDoubleSolutionStrategyParameter crossoverRepairStrategy =
-        new RepairDoubleSolutionStrategyParameter(
-            "crossoverRepairStrategy", Arrays.asList("random", "round", "bounds"));
-    crossoverParameter.addGlobalParameter(crossoverRepairStrategy);
-
-    RealParameter distributionIndex = new RealParameter("sbxDistributionIndex", 5.0, 400.0);
-    crossoverParameter.addSpecificParameter("SBX", distributionIndex);
-
-    RealParameter alpha = new RealParameter("blxAlphaCrossoverAlphaValue", 0.0, 1.0);
-    crossoverParameter.addSpecificParameter("BLX_ALPHA", alpha);
 
     MutationParameter mutationParameter =
-        new MutationParameter(
-            Arrays.asList("uniform", "polynomial", "linkedPolynomial", "nonUniform"));
+        new MutationParameter(List.of("swap"));
 
     RealParameter mutationProbabilityFactor = new RealParameter("mutationProbabilityFactor",
         0.0, 2.0);
     mutationParameter.addGlobalParameter(mutationProbabilityFactor);
-    RepairDoubleSolutionStrategyParameter mutationRepairStrategy =
-        new RepairDoubleSolutionStrategyParameter(
-            "mutationRepairStrategy", Arrays.asList("random", "round", "bounds"));
-    mutationParameter.addGlobalParameter(mutationRepairStrategy);
 
-    RealParameter distributionIndexForPolynomialMutation =
-        new RealParameter("polynomialMutationDistributionIndex", 5.0, 400.0);
-    mutationParameter.addSpecificParameter("polynomial", distributionIndexForPolynomialMutation);
-
-    RealParameter distributionIndexForLinkedPolynomialMutation =
-        new RealParameter("linkedPolynomialMutationDistributionIndex", 5.0, 400.0);
-    mutationParameter.addSpecificParameter("linkedPolynomial",
-        distributionIndexForLinkedPolynomialMutation);
-
-    RealParameter uniformMutationPerturbation =
-        new RealParameter("uniformMutationPerturbation", 0.0, 1.0);
-    mutationParameter.addSpecificParameter("uniform", uniformMutationPerturbation);
-
-    RealParameter nonUniformMutationPerturbation =
-        new RealParameter("nonUniformMutationPerturbation", 0.0, 1.0);
-    mutationParameter.addSpecificParameter("nonUniform", nonUniformMutationPerturbation);
-
-    //offspringPopulationSizeParameter = new IntegerParameter("offspringPopulationSize", 1,  400);
     offspringPopulationSizeParameter = new CategoricalIntegerParameter("offspringPopulationSize",
         List.of(1, 2, 5, 10, 20, 50, 100, 150, 200, 300, 400));
 
@@ -172,8 +132,7 @@ public class AutoNSGAII implements AutoConfigurableAlgorithm {
 
   private void createInitialSolution() {
     createInitialSolutionsParameter =
-        new CreateInitialSolutionsParameter(
-            Arrays.asList("random", "latinHypercubeSampling", "scatterSearch"));
+        new CreateInitialSolutionsParameter(List.of("random"));
   }
 
   private void algorithmResult() {
@@ -201,7 +160,7 @@ public class AutoNSGAII implements AutoConfigurableAlgorithm {
   }
 
 
-  protected Problem<DoubleSolution> problem() {
+  protected Problem<PermutationSolution<Integer>> problem() {
     return ProblemFactory.loadProblem(problemNameParameter.value());
   }
 
@@ -210,12 +169,12 @@ public class AutoNSGAII implements AutoConfigurableAlgorithm {
    *
    * @return
    */
-  public EvolutionaryAlgorithm<DoubleSolution> create() {
+  public EvolutionaryAlgorithm<PermutationSolution<Integer>> create() throws IOException {
     JMetalRandom.getInstance().setSeed(randomGeneratorSeedParameter.value());
 
-    Problem<DoubleSolution> problem = problem() ;
+    var problem = (PermutationProblem<PermutationSolution<Integer>>)problem();
 
-    Archive<DoubleSolution> archive = null;
+    Archive<PermutationSolution<Integer>> archive = null;
 
     if (algorithmResultParameter.value().equals("externalArchive")) {
       externalArchiveParameter.setSize(populationSizeParameter.value());
@@ -223,56 +182,50 @@ public class AutoNSGAII implements AutoConfigurableAlgorithm {
       populationSizeParameter.value(populationSizeWithArchiveParameter.value());
     }
 
-    Ranking<DoubleSolution> ranking = new FastNonDominatedSortRanking<>(
+    Ranking<PermutationSolution<Integer>> ranking = new FastNonDominatedSortRanking<>(
         new DominanceWithConstraintsComparator<>());
-    DensityEstimator<DoubleSolution> densityEstimator = new CrowdingDistanceDensityEstimator<>();
-    MultiComparator<DoubleSolution> rankingAndCrowdingComparator =
+    DensityEstimator<PermutationSolution<Integer>> densityEstimator = new CrowdingDistanceDensityEstimator<>();
+    MultiComparator<PermutationSolution<Integer>> rankingAndCrowdingComparator =
         new MultiComparator<>(
             Arrays.asList(
                 Comparator.comparing(ranking::getRank),
                 Comparator.comparing(densityEstimator::value).reversed()));
 
     var initialSolutionsCreation =
-        (SolutionsCreation<DoubleSolution>) createInitialSolutionsParameter.getParameter(
-            (DoubleProblem) problem,
+        (SolutionsCreation<PermutationSolution<Integer>>) createInitialSolutionsParameter.getParameter(
+            problem,
             populationSizeParameter.value());
 
     MutationParameter mutationParameter = (MutationParameter) variationParameter.findSpecificParameter(
         "mutation");
-    mutationParameter.addNonConfigurableParameter("numberOfProblemVariables",
+    mutationParameter.addNonConfigurableParameter("permutationLength",
         problem.numberOfVariables());
 
-    if (mutationParameter.value().equals("nonUniform")) {
-      mutationParameter.addSpecificParameter("nonUniform", maximumNumberOfEvaluationsParameter);
-      mutationParameter.addNonConfigurableParameter("maxIterations",
-          maximumNumberOfEvaluationsParameter.value() / populationSizeParameter.value());
-    }
+    var variation = (Variation<PermutationSolution<Integer>>) variationParameter.getPermutationSolutionParameter();
 
-    var variation = (Variation<DoubleSolution>) variationParameter.getDoubleSolutionParameter();
-
-    Selection<DoubleSolution> selection =
+    Selection<PermutationSolution<Integer>> selection =
         selectionParameter.getParameter(
             variation.getMatingPoolSize(), rankingAndCrowdingComparator);
 
-    Evaluation<DoubleSolution> evaluation;
+    Evaluation<PermutationSolution<Integer>> evaluation;
     if (algorithmResultParameter.value().equals("externalArchive")) {
       evaluation = new SequentialEvaluationWithArchive<>(problem, archive);
     } else {
       evaluation = new SequentialEvaluation<>(problem);
     }
 
-    RankingAndDensityEstimatorPreference<DoubleSolution> preferenceForReplacement = new RankingAndDensityEstimatorPreference<>(
+    RankingAndDensityEstimatorPreference<PermutationSolution<Integer>> preferenceForReplacement = new RankingAndDensityEstimatorPreference<>(
         ranking, densityEstimator);
-    Replacement<DoubleSolution> replacement =
+    Replacement<PermutationSolution<Integer>> replacement =
         new RankingAndDensityEstimatorReplacement<>(preferenceForReplacement,
             Replacement.RemovalPolicy.ONE_SHOT);
 
     Termination termination =
         new TerminationByEvaluations(maximumNumberOfEvaluationsParameter.value());
 
-    class EvolutionaryAlgorithmWithArchive extends EvolutionaryAlgorithm<DoubleSolution> {
+    class EvolutionaryAlgorithmWithArchive extends EvolutionaryAlgorithm<PermutationSolution<Integer>> {
 
-      private Archive<DoubleSolution> archive;
+      private Archive<PermutationSolution<Integer>> archive;
 
       /**
        * Constructor
@@ -286,18 +239,18 @@ public class AutoNSGAII implements AutoConfigurableAlgorithm {
        * @param replacement
        */
       public EvolutionaryAlgorithmWithArchive(String name,
-          SolutionsCreation<DoubleSolution> initialPopulationCreation,
-          Evaluation<DoubleSolution> evaluation, Termination termination,
-          Selection<DoubleSolution> selection, Variation<DoubleSolution> variation,
-          Replacement<DoubleSolution> replacement,
-          Archive<DoubleSolution> archive) {
+          SolutionsCreation<PermutationSolution<Integer>> initialPopulationCreation,
+          Evaluation<PermutationSolution<Integer>> evaluation, Termination termination,
+          Selection<PermutationSolution<Integer>> selection, Variation<PermutationSolution<Integer>> variation,
+          Replacement<PermutationSolution<Integer>> replacement,
+          Archive<PermutationSolution<Integer>> archive) {
         super(name, initialPopulationCreation, evaluation, termination, selection, variation,
             replacement);
         this.archive = archive;
       }
 
       @Override
-      public List<DoubleSolution> result() {
+      public List<PermutationSolution<Integer>> result() {
         return archive.solutions() ;
       }
     }
